--- a/package.json
+++ b/package.json
@@ -1,35 +1,79 @@
 {
   "name": "pacer",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.6",
-    "@fortawesome/free-solid-svg-icons": "^5.4.1",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "ajv": "^6.5.4",
-    "node-sass": "^4.9.3",
-    "react": "^16.5.2",
-    "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.5.2",
-    "react-scripts": "^2.0.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "parcel src/index.html"
+    "eslint": "eslint \"src/**/*.js\"",
+    "start": "concurrently \"yarn run dev-server\" \"yarn run dev-bundle\"",
+    "test": "jest",
+    "dev-server": "cross-env NODE_PATH=./src nodemon --exec \"babel-node src/server/server.js\" --ignore .reactful.json --ignore public/",
+    "dev-bundle": "webpack -wd",
+    "verify-tests": "jest --coverage",
+    "build-react": "cross-env NODE_ENV=production webpack --progress -p",
+    "build-node": "babel src -d build --config-file ./babel-node.config.js --copy-files",
+    "build-all": "yarn install && yarn run build-react && yarn run build-node",
+    "prod-start": "cross-env NODE_ENV=production NODE_PATH=./build pm2 start -i max build/server/server.js --update-env --name pacerProd",
+    "prod-stop": "pm2 stop pacerProd",
+    "prod-reload": "pm2 reload --update-env pacerProd",
+    "prod-logs": "pm2 logs --update-env pacerProd"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "jest": {
+    "modulePaths": [
+      "./src"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>src/setupTests.js"
+    ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "dependencies": {
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "@babel/runtime": "^7.6.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.6",
+    "acorn-jsx": "^5.1.0",
+    "babel-loader": "^8.0.6",
+    "body-parser": "^1.19.0",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
+    "ejs": "^2.7.1",
+    "express": "4",
+    "mini-css-extract-plugin": "^0.8.0",
+    "morgan": "^1.9.1",
+    "node-sass": "^4.12.0",
+    "pm2": "^3.5.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-fontawesome": "^1.6.1",
+    "regenerator-runtime": "^0.13.3",
+    "sass-loader": "^8.0.0",
+    "serialize-javascript": "^2.1.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-chunk-hash": "^0.6.0",
+    "webpack-cli": "^3.3.9"
+  },
   "devDependencies": {
-    "parcel-bundler": "^1.10.3"
+    "@babel/node": "^7.6.3",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "concurrently": "^4.1.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.5.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.1.2",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.4",
+    "reactful": "^2.0.6"
   }
 }
